<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.intino</groupId>
	<artifactId>plugin</artifactId>
	<version>4.0.0</version>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<outputDirectory>../out/production/intino-plugin</outputDirectory>
		<testOutputDirectory>../out/test/intino-plugin</testOutputDirectory>
		<directory>../out/build/intino-plugin</directory>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>gen</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>intino-maven</id>
			<url>https://artifactory.intino.io/artifactory/releases</url>
		</repository>
		<repository>
			<id>siani-maven</id>
			<url>https://artifactory.siani.es/artifactory/libs-release</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>io.intino.magritte</groupId>
			<artifactId>language</artifactId>
			<version>1.3.3</version>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>message</artifactId>
			<version>4.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>json</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.magritte</groupId>
			<artifactId>io</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.magritte</groupId>
			<artifactId>builder-constants</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>io.intino.konos</groupId>
			<artifactId>konos-builder-constants</artifactId>
			<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.goros</groupId>
			<artifactId>shifter</artifactId>
			<version>1.0.5</version>
		</dependency>
		<dependency>
			<groupId>tara.dsl</groupId>
			<artifactId>legio</artifactId>
			<version>${project.version}</version>
			<scope>system</scope>
			<systemPath>${user.home}/.m2/repository/tara/dsl/legio/${project.version}/Legio-${project.version}.jar
			</systemPath>
		</dependency>
		<dependency>
			<groupId>com.jcabi</groupId>
			<artifactId>jcabi-aether</artifactId>
			<version>0.10.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>org.slf4j:jcl-over-slf4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-project</artifactId>
			<version>2.2.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.maven</groupId>
					<artifactId>maven-compat</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.code.google-collections</groupId>
					<artifactId>google-collect</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-settings-builder</artifactId>
			<version>3.8.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-model</artifactId>
			<version>3.8.1</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.plexus</groupId>
			<artifactId>plexus-interpolation</artifactId>
			<version>1.26</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.plexus</groupId>
			<artifactId>plexus-utils</artifactId>
			<version>3.4.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.shared</groupId>
			<artifactId>maven-invoker</artifactId>
			<version>3.1.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino</groupId>
			<artifactId>cesar-api-accessor</artifactId>
			<version>5.2.4</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.intino</groupId>
			<artifactId>plugin-interface</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.siani.itrules</groupId>
			<artifactId>itrules</artifactId>
			<version>1.9.3</version>
		</dependency>
		<dependency>
			<groupId>com.jcabi</groupId>
			<artifactId>jcabi-ssh</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>io.intino.itrules</groupId>
			<artifactId>engine</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.itrules</groupId>
			<artifactId>reader-itr</artifactId>
			<version>1.1.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.antlr</groupId>
					<artifactId>antlr4</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
			<version>4.13.2</version>
		</dependency>
		<dependency>
			<groupId>es.nitaur.markdown</groupId>
			<artifactId>txtmark</artifactId>
			<version>0.16</version>
		</dependency>
		<dependency>
			<groupId>io.intino.ness</groupId>
			<artifactId>data-hub-terminal-plugin</artifactId>
			<version>4.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.intino.archetype</groupId>
			<artifactId>archetype-plugin</artifactId>
			<version>1.1.0</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>
